# torchbenchx

./: LICENSE  README.md  pyproject.toml  requirement.txt  setup.py
torchbenchx/: __init__.py  benchx.py
